objects/School__c.object
<CustomObject>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>C1</fullName>
                </value>
                <value>
                    <fullName>C2</fullName>
                </value>
                <value>
                    <fullName>C3</fullName>
                </value>
                <value>
                    <fullName>C4</fullName>
                </value>
                <value>
                    <fullName>C5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Date_of_Establishing__c</fullName>
        <label>Date of Establishing</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Location123__c</fullName>
        <label>Location123</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tirupati</fullName>
                </value>
                <value>
                    <fullName>Kadapa</fullName>
                </value>
                <value>
                    <fullName>Hyderabad</fullName>
                </value>
                <value>
                    <fullName>Chittoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Tiruapthi</fullName>
                </value>
                <value>
                    <fullName>Kadapa</fullName>
                </value>
                <value>
                    <fullName>Karnool</fullName>
                </value>
                <value>
                    <fullName>Ananthpoor</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <inlineHelpText>Select State</inlineHelpText>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>ST1</fullName>
                </value>
                <value>
                    <fullName>ST2</fullName>
                </value>
                <value>
                    <fullName>ST3</fullName>
                </value>
                <value>
                    <fullName>ST4</fullName>
                </value>
                <value>
                    <fullName>ST5</fullName>
                </value>
                <value>
                    <fullName>ST6</fullName>
                </value>
                <value>
                    <fullName>ST7</fullName>
                </value>
                <value>
                    <fullName>ST8</fullName>
                </value>
                <value>
                    <fullName>ST9</fullName>
                </value>
                <value>
                    <fullName>ST10</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>School</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>School Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schools</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Addressvalidation</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( Address__c )</errorConditionFormula>
        <errorDisplayField>Address__c</errorDisplayField>
        <errorMessage>You must enter Address</errorMessage>
    </validationRules>
</CustomObject>